# rust-twitter

./: Cargo.toml  README.md
backend/query/: Cargo.toml
backend/query/src/: lib.rs  user.rs
backend/server/: Cargo.toml
backend/server/src/: error.rs  extractor.rs  lib.rs  router.rs
frontend/: Cargo.toml  index.html  package-lock.json  tailwind.config.js
frontend/src/: app.rs  elements.rs  main.rs  page.rs  tailwind.css
frontend/src/elements/: keyed_notification_box.rs
frontend/src/page/: register.rs
shared/domain/: Cargo.toml
shared/domain/src/: ids.rs  lib.rs  user.rs
shared/endpoint/: Cargo.toml
shared/endpoint/src/: lib.rs
shared/endpoint/src/user/: endpoint.rs
